<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/favImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/drink_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/favName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/sample_drink_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/favImage"
        app:layout_constraintTop_toTopOf="@id/favImage"
        app:layout_constraintEnd_toStartOf="@id/removeFavorite"/>

    <TextView
        android:id="@+id/favPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/price_4_50"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/favName"
        app:layout_constraintTop_toBottomOf="@id/favName"
        app:layout_constraintEnd_toEndOf="@id/favName"/>

    <ImageView
        android:id="@+id/removeFavorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/remove_from_favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
