<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <ImageView
        android:id="@+id/recoImage"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/drink_image"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/recoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/sample_drink_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/recoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recoPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/price_4_50"
        android:textSize="12sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/recoName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
