<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/drinkImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/drink_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/drinkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/sample_drink_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/drinkImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/drinkPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="@string/price_4_50"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/drinkName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
